# Office-Template-Helper

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  app_icon.rc  app_icon.res  build.rs  createpackage.md
assets/icons/: MyIcon.icns  buildIcon.sh
build_script/linux/: build_ubuntu.sh  changelog  commit.sh  control  copyright  full_commits.sh  move_to_deb_structure.sh  postinst  postint  prerm  rules
build_script/macos/: Info.plist  move_to_pkg_structure.sh  postinstall  preinstall  uninstall.sh
build_script/windows/: buildscript.iss
reference/: simple.xyz  simple.xz
reference/simple/: outer.xml
reference/simple/inside/: inner.xml
settings/: GUI_theme.toml  addon.toml  addon.yaml  valid_file.toml  valid_file.yaml
src/: addon.rs  arguments.rs  cli.rs  file_handler.rs  gui.rs  gui_helper.rs  lib.rs  main.rs  modify.rs
test/: blank.vsdx  complex.abc  complex.xml  modified.abc  modified.vsdx  simple.xyz
ui/: appwindow.slint
