[package]
name = "office-template-helper"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "office-template-helper-CLI"
path = "src/cli.rs"

[[bin]]
name = "office-template-helper-GUI"
path = "src/gui.rs"


[dependencies]
zip = "2.0.0"
quick-xml = "0.31.0"
flate2 = "1.0"
slint = "1.5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.13"
serde_yaml = "0.9.34"
clap = "3.0.0-beta.2"

[build-dependencies]
slint-build = "1.5"