[package]
name = "office-template-helper"
version = "1.0.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "office-template-helper-CLI"
path = "src/cli.rs"

[[bin]]
name = "office-template-helper-GUI"
path = "src/gui.rs"


[dependencies]
zip = "2.0.0"
quick-xml = "0.31.0"
flate2 = "1.0"
slint = "1.5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.13"
serde_yaml = "0.9.34"
clap = "4.5.4"
rfd = "0.14.0"
ctrlc = "3.2.1"
rand = "0.8.4"
dirs = "5.0.1"

[target.'cfg(windows)'.dependencies]
tray-item = "0.10"

[target.'cfg(unix)'.dependencies]
tray-item = { version = "0.10", features = [ "ksni" ] }
png = "0.17"

[build-dependencies]
slint-build = "1.5"

[target.'cfg(windows)'.build-dependencies]
tauri-winres = "0.1"

[package.metadata.tauri-winres]
ProductName = "Office Template Helper"
FileDescription = "Office Template Helper is a versatile desktop application designed to enhance the productivity of Microsoft Office users by enabling the easy integration of add-ons directly into Office files via XML modifications."

[package.metadata.appimage]
assets = ["settings", "reference"]